--- a/Contact-admin.html
+++ b/Contact-admin.html
@@ -27,7 +27,7 @@
     <div class="container">
         <div class=" ms-auto">
             <ul class=" d-flex justify-content-end align-items-center">
-                <li><a href="#" class="contact-admin">Contact admin</a></li>
+                <li><a href="Contact-admin.html" class="contact-admin">Contact admin</a></li>
                 <li class="ms-lg-3 ms-md-3 ms-sm-0">
                     <div class="dropdown">
 
@@ -41,7 +41,7 @@
                             <li><a class="dropdown-item" href="#">View profile</a></li>
                             <li><a class="dropdown-item" href="#">Edit profile</a></li>
                             <li><a class="dropdown-item" href="Members-page.html">View Members</a></li>
-                            <li><a class="dropdown-item" href="#">Country/Community</a></li>
+                            <li><a class="dropdown-item" href="Countries-Communities.html">Country/Community</a></li>
                             <li><a class="dropdown-item" href="#">Logout</a></li>
                         </ul>
                     </div>
@@ -187,25 +187,27 @@
                         <div class="head-title">
                             <p>Contact admin</p>
                         </div>
-                        <div class="">
+                        <div class="connect-form-setion">
                             <form action="">
-                                <p>admin</p>
+                                <p class="mt-2">admin</p>
+                                <div class="cheakbox-section">
                                 <div>
                                     <input type="checkbox" id="Global" name="answer" value="Global">
                                     <label for="Global">Global</label>
                                 </div>
-                                <div>
+                                <div class="ms-4">
                                     <input type="checkbox" id="Algeria" name="answer" value="Algeria">
                                     <label for="Algeria">Algeria</label>
                                 </div>
-                                <div>
+                                <div class="ms-4">
                                     <input type="checkbox" id="Kenya" name="answer" value="Kenya">
                                     <label for="Kenya">Kenya</label>
                                 </div>
-                                <div>
-                                    <textarea name="" id=""  rows="10"></textarea>
                                 </div>
-                                <div>
+                                
+                                    <textarea name="" id=""  rows="10" placeholder="Enter your message"></textarea>
+                                
+                                <div class="btn-section">
                                     <button>Submit</button>
                                 </div>
                             </form>
