--- a/Countries-Communities.html
+++ b/Countries-Communities.html
@@ -97,7 +97,7 @@
             <ul class="navbar-nav menu-iteam  mb-2 mb-lg-0 ">
 
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="Documents-page.html">
+                    <a class="nav-link " aria-current="page" href="Documents-page.html">
                         <div class="logo-img"><i class="fa-solid fa-book"></i></div><span> Documents
                         </span>
                     </a>
@@ -106,7 +106,7 @@
                     <a class="nav-link " href="News-page.html"><div class="logo-img"> <i class="fa-solid fa-newspaper"></i></div><span> News</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link  active" href="Event-page.html"><div class="logo-img"> <i class="fa-solid fa-location-dot"></i></div><span>
+                    <a class="nav-link " href="Event-page.html"><div class="logo-img"> <i class="fa-solid fa-location-dot"></i></div><span>
                             Events</span></a>
                 </li>
                 <li class="nav-item">
@@ -128,7 +128,9 @@
 <!-- secondary-menu-section End -->
 </div>
 
-    <section class="News-blog-page-setion">
+
+    <!-- News-page-section start -->
+    <div class="contact-admin-page-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 order-2 order-lg-1  order-md-1">
@@ -181,96 +183,35 @@
                     </aside>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-12 order-1 order-lg-2  order-md-2">
-                    <div class="all-blog-contain">
-                        <div class="baner-img">
-                            <img src="assets/img/all/full-img.png" alt="">
-                        </div>
-                        <div class="d-flex justify-content-between mt-2 align-items-center">
-                            <a class="main-title">Event title will come here event title will come here</a>
-                            <div class=" text-end btn-box"><a href="# "><button class="button Download-btn">Download
-                                        PDF</button></a></div>
-                        </div>
-                        <div>
-                            <p class="date">20/02/2023</p>
-                        </div>
-                        <article class="info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
-                            delectus, dolor tenetur
-                            iure, quasi asperiores exercitationem excepturi similique modi deserunt deleniti aspernatur
-                            magnam placeat ea. Placeat sapiente facere similique eligendi? Lorem ipsum dolor sit amet
-                            consectetur, adipisicing elit. Tenetur, accusantium numquam reiciendis maxime hic totam, vel
-                            ex ducimus labore atque vitae ea iusto corrupti. Dolorem sapiente possimus totam
-                            necessitatibus delectus?</article>
-                        <div class="d-flex row">
-                            <div class="col-lg-6 col-md-12 col-sm-12">
-                                <article class="info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Placeat voluptatibus
-                                    hic eum temporibus, itaque reprehenderit sint sunt explicabo, voluptatem neque in
-                                    nobis odit sed! Ab sit animi voluptate corporis? Voluptates! Lorem ipsum dolor sit
-                                    amet consectetur adipisicing elit. Temporibus tenetur, nesciunt aspernatur, aperiam
-                                    veniam vitae, possimus suscipit aut repellendus voluptatibus porro deleniti
-                                    accusantium sapiente ducimus et. Consequuntur natus laboriosam corrupti?</article>
-                            </div>
-                            <div class="col-sm-12 col-md-12 col-lg-6">
-                                <div class="img-box">
-                                    <img src="assets/img/all/childern/Mask Group 9@2x.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                            <article class="info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
-                                laudantium
-                                architecto ex, excepturi, id error quisquam quibusdam dignissimos, nulla rem dolores.
-                                Minima porro quaerat, rerum rem quis animi veritatis ipsum? Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit. Ad, repellat veniam? Eveniet corporis harum ipsa quas
-                                perspiciatis distinctio corrupti facilis quae repudiandae, vel reprehenderit iure
-                                nesciunt et vero autem ad?</article>
-                        </div>
-                        <div>
-                            <article class="info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
-                                laudantium
-                                architecto ex, excepturi, id error quisquam quibusdam dignissimos, nulla rem dolores.
-                                Minima porro quaerat, rerum rem quis animi veritatis ipsum? Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit. Ad, repellat veniam? Eveniet corporis harum ipsa quas
-                                perspiciatis distinctio corrupti facilis quae repudiandae, vel reprehenderit iure
-                                nesciunt et vero autem ad?</article>
-                        </div>
-
-                        <div class="pre-next-setion">
-                            <div>
-                                <p class="preview-tile active">
-                                    << Previous</p>
-                            </div>
-                            <div>
-                                <p class="next-title">Next >></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-    </section>
-
-
-    <footer>
-        <div class="container">
-            <div class="d-flex align-items-center justify-content-between">
-                <div class="col-lg-4 col-md-4 col-sm-6 ">
-                    <div class="text-center">
-                    <a href="#" class="connect-info">Connect with us</a>
-                </div>
-                </div>
-                <div class="col-lg-8 col-md-8 col-sm-6">
-                    <div>
-                    <ul class="footer-icon-box">
-                        <li class="icon"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                        <li class="icon"><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                        <li class="icon"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-                                                <li class="icon icon-b"><a href="#"><i class="fa-solid fa-rss"></i></a></li>
-
-                    </ul>
-                    </div>
+               
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+
+<!-- news-page-section End -->
+<footer>
+    <div class="container">
+        <div class="d-flex align-items-center justify-content-between">
+            <div class="col-lg-4 col-md-4 col-sm-6 ">
+                <div class="text-center">
+                <a href="#" class="connect-info">Connect with us</a>
+            </div>
+            </div>
+            <div class="col-lg-8 col-md-8 col-sm-6">
+                <div>
+                <ul class="footer-icon-box">
+                    <li class="icon"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li class="icon"><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                    <li class="icon"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                                            <li class="icon icon-b"><a href="#"><i class="fa-solid fa-rss"></i></a></li>
+
+                </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
     <!-- iconify icon -->
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
