--- a/Quiz-answer.html
+++ b/Quiz-answer.html
@@ -29,7 +29,7 @@
         <div class="container">
             <div class=" ms-auto">
                 <ul class=" d-flex justify-content-end align-items-center">
-                    <li><a href="#" class="contact-admin">Contact admin</a></li>
+                    <li><a href="Contact-admin.html" class="contact-admin">Contact admin</a></li>
                     <li class="ms-lg-3 ms-md-3 ms-sm-0">
                         <div class="dropdown">
 
@@ -43,7 +43,7 @@
                                 <li><a class="dropdown-item" href="#">View profile</a></li>
                                 <li><a class="dropdown-item" href="#">Edit profile</a></li>
                                 <li><a class="dropdown-item" href="Members-page.html">View Members</a></li>
-                                <li><a class="dropdown-item" href="#">Country/Community</a></li>
+                                <li><a class="dropdown-item" href="Countries-Communities.html">Country/Community</a></li>
                                 <li><a class="dropdown-item" href="#">Logout</a></li>
                             </ul>
                         </div>
