--- a/Document-details page.html
+++ b/Document-details page.html
@@ -241,8 +241,12 @@
                                     <img src="assets/img/all/profile.png" alt="">
                                 </div>
                                 </div>
-                                <div class="reviews-chate-box ">
-                                    <p class="name-title">Name will come here <span class="date-post">  Posted on: 08-03-2023 </span></p>
+                                <div class="reviews-chate-box">
+                                    <div class="title-Setion-doc" >
+
+                                        <p class="name-title">Name will come here </p>
+                                        <p class="date-post">Posted on: 08-03-2023 </p>
+                                    </div>
                                     <p class="Description-text" >Description will come here description will come here description will come here description will come here Description will come here description will come here description will come here </p>
 
                                 </div>
