--- a/Quiz-page.html
+++ b/Quiz-page.html
@@ -280,7 +280,7 @@
                                     <input type="radio" id="Yes" name="answer" value="Yes">
                                     <label for="Yes" class="col-11"> Yes</label><br>
                                 </div>
-                                <div class="d-flex  align-baseline">
+                                <div class="input-box">
                                     <input type="radio" id="No" name="answer" value="No">
                                     <label for="No" class="col-11">No</label><br>
                                 </div>
