--- a/Users-Community-View.html
+++ b/Users-Community-View.html
@@ -10,11 +10,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
-
     <!-- font-awesome icon link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
 
 
@@ -43,7 +43,8 @@
                                 <li><a class="dropdown-item" href="#">View profile</a></li>
                                 <li><a class="dropdown-item" href="#">Edit profile</a></li>
                                 <li><a class="dropdown-item" href="Members-page.html">View Members</a></li>
-                                <li><a class="dropdown-item" href="Countries-Communities.html">Country/Community</a></li>
+                                <li><a class="dropdown-item" href="Countries-Communities.html">Country/Community</a>
+                                </li>
                                 <li><a class="dropdown-item" href="#">Logout</a></li>
                             </ul>
                         </div>
@@ -121,7 +122,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="Quiz-page.html">
+                            <a class="nav-link" href="Quiz-page.html">
                                 <div class=" logo-img"><i class="fa-solid fa-chart-simple"></i></div><span> Quiz</span>
                             </a>
                         </li>
@@ -134,7 +135,8 @@
     </div>
 
 
-    <div class="Quiz-answer-page-section">
+
+    <div class="Users-Community-page-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 order-2 order-lg-1  order-md-1">
@@ -187,132 +189,22 @@
                     </aside>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-12 order-1 order-lg-2  order-md-2">
-                    <div class="Quiz-answer-right-section">
-                        <div class="Quiz-que-box">
-                            <div class="Quiz-title">
-                                <p><a href="">Single choice question will come here</a></p>
-                            </div>
-                            <form action="">
-                                <div class="progress-setion-box">
-                                    <div>Answer 1 will come here answer 1 Answer 1 will
-                                        come here
-                                        answer</div>
-                                    <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar " style="width: 60%">60%</div>
-                                    </div>
-                                </div>
-                                <div class="progress-setion-box">
-                                    <div>Answer 1 will come here answer 1</div>
-                                    <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 20%">20%</div>
-                                    </div>
-                                </div>
-                                <div class="progress-setion-box">
-                                    <div>Answer 1 will come here answer 1</div>
-                                    <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="15" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 15%">15%</div>
-                                    </div>
-                                </div>
-                                <div class="progress-setion-box">
-                                    <div>Answer 1 will come here answer 1</div>
-                                    <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 10%">10%</div>
-                                    </div>
-                                </div>
-                            </form>
-
+                 <div class=" Users-Community-right-body">
+                    
+                        <p class="head-title">Community name will come here</p>
+                        <p> Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here</p>
+                        <div class="btn-section">
+                            <a href="" class="btn-box">Country 1</a>
+                            <a href="" class="btn-box">Country 2</a>
                         </div>
-                        <!-- 2 -->
-                        <div class="Quiz-que-box">
-                            <div class="Quiz-title">
-                                <p><a href="">True/False question will come here</a></p>
-                            </div>
-                            <form action="">
-                                <div class="progress-setion-box">
-                                    <div>True</div>
-                                    <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 60%">60%</div>
-                                    </div>
-                                </div>
-                                <div class="progress-setion-box">
-                                    <div>False</div>
-                                    <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 40%">40%</div>
-                                    </div>
-                                </div>
-                            </form>
-
-                        </div>
-                        <!-- 3 -->
-                        <div class="Quiz-que-box">
-                            <div class="Quiz-title">
-                                <p><a href="">Multiple choice question will come here</a></p>
-                            </div>
-                            <form action="">
-                                <div class="progress-setion-box">
-                                    <div>Answer 1 will come here answer 1 Answer 1 will
-                                        come here
-                                        answer</div>
-                                    <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar " style="width: 60%">60%</div>
-                                    </div>
-                                </div>
-                                <div class="progress-setion-box">
-                                    <div>Answer 1 will come here answer 1</div>
-                                    <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 20%">20%</div>
-                                    </div>
-                                </div>
-                                <div class="progress-setion-box">
-                                    <div>Answer 1 will come here answer 1</div>
-                                    <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="15" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 15%">15%</div>
-                                    </div>
-                                </div>
-                                <div class="progress-setion-box">
-                                    <div>Answer 1 will come here answer 1</div>
-                                    <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 10%">10%</div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                        <!-- 4 -->
-                        <div class="Quiz-que-box">
-                            <div class="Quiz-title">
-                                <p><a href="">Yes/no question will come here</a></p>
-                            </div>
-                            <form action="" class="p-0">
-                                <div class="input-box">
-
-                                    <input type="radio" id="Yes" name="answer" value="Yes">
-                                    <label for="Yes" class="col-11"> Yes</label><br>
-                                </div>
-                                <div class="input-box">
-                                    <input type="radio" id="No" name="answer" value="No">
-                                    <label for="No" class="col-11">No</label><br>
-                                </div>
-
-                                <button>Submit</button>
-                            </form>
-
-                        </div>
-                    </div>
+                   
+                 </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- news-page-section End -->
     <footer>
         <div class="container">
             <div class="d-flex align-items-center justify-content-between">
@@ -328,6 +220,7 @@
                             <li class="icon"><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
                             <li class="icon"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
                             <li class="icon icon-b"><a href="#"><i class="fa-solid fa-rss"></i></a></li>
+
                         </ul>
                     </div>
                 </div>
@@ -345,7 +238,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
         integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
         crossorigin="anonymous"></script>
-    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
