--- a/Countries-Communities.html
+++ b/Countries-Communities.html
@@ -192,17 +192,17 @@
                         <div class="head-title">
                             <p>Country/Community</p>
                         </div>
-                        <div>
-                            <p>List by</p>
+                        <div >
+                            <p class="mb-2">List by</p>
                             <div class="d-flex" id="myTab" role="tablist">
                                 <div role="presentation">
-                                    <div class="nav-link active" id="Country-tab" data-bs-toggle="tab" data-bs-target="#Country-tab-pane" type="button" role="tab" aria-controls="Country-tab-pane" aria-selected="true">
-                                        <input type="radio" id="Country" name="answer" value="Country">
+                                    <div class="nav-link active input-box" id="Country-tab" data-bs-toggle="tab" data-bs-target="#Country-tab-pane" type="button" role="tab" aria-controls="Country-tab-pane" aria-selected="true">
+                                        <input type="radio" id="Country" name="answer" value="Country" checked>
                                         <label for="Country">Country</label>
                                     </div>
                                 </div>
                                 <div class="ms-4" role="presentation">
-                                    <div class="nav-link" id="Community-tab" data-bs-toggle="tab" data-bs-target="#Community-tab-pane" type="button" role="tab" aria-controls="Community-tab-pane" aria-selected="false">
+                                    <div class="nav-link input-box" id="Community-tab" data-bs-toggle="tab" data-bs-target="#Community-tab-pane" type="button" role="tab" aria-controls="Community-tab-pane" aria-selected="false">
                                         <input type="radio" id="Community" name="answer" value="Community">
                                         <label for="Community">Community</label>
                                     </div>
@@ -215,7 +215,7 @@
                                 <table class="dic-table" cellspacing="10">
                                     <thead>
                                       <tr>
-                                        <th >S.no</th>
+                                        <th >Sr.no</th>
                                         <th class="country">Country</th>
                                         <th >Community</th>
                                       </tr>
@@ -289,9 +289,9 @@
                                 <table class="dic-table" cellspacing="10">
                                     <thead>
                                       <tr>
-                                        <th >S.no</th>
-                                        <th class="country">Country</th>
+                                        <th >Sr.no</th>
                                         <th >Community</th>
+                                        <th class="country">Country</th>
                                       </tr>
                                     </thead>
                                     <tbody>
