--- a/Documents-page.html
+++ b/Documents-page.html
@@ -135,7 +135,7 @@
                     <aside class="Latest-updates-section">
                         <div class="latest-box">
                             <h3 class="main-title">Latest updates</h3>
-                            <a class="info-title">Document name will come here</a>
+                            <a class="info-title" href="Admin-Private-Documents-Case.html">Document name will come here</a>
                             <p class="date"> 08-03-2023</p>
                         </div>
                         <div class="latest-box">
