--- a/Admin-Private-Documents-Case.html
+++ b/Admin-Private-Documents-Case.html
@@ -77,7 +77,7 @@
                 <div class="col-lg-4 col-md-4 ">
                     <div class="dropdown  dropdown-section">
                         <div class=" dropdown-toggle dropdown-title " data-bs-toggle="dropdown" aria-expanded="false">
-                            <span> Select Spaces </span>
+                            <span> Algeria </span>
                             <span class="ms-auto icon-box"><iconify-icon icon="teenyicons:up-solid"
                                     class="up-down-arro"></iconify-icon></span>
                         </div>
@@ -295,7 +295,7 @@
                                         <div class="dropdown  dropdown-section">
                                             <div class=" dropdown-toggle dropdown-title " data-bs-toggle="dropdown"
                                                 aria-expanded="false">
-                                                <span> Select Spaces </span>
+                                                <span> Privet </span>
                                                 <span class="ms-auto icon-box"><iconify-icon icon="teenyicons:up-solid"
                                                         class="up-down-arro"></iconify-icon></span>
                                             </div>
@@ -370,7 +370,7 @@
                                         <div class="dropdown  dropdown-section">
                                             <div class=" dropdown-toggle dropdown-title " data-bs-toggle="dropdown"
                                                 aria-expanded="false">
-                                                <span> Select Spaces </span>
+                                                <span> Privet </span>
                                                 <span class="ms-auto icon-box"><iconify-icon icon="teenyicons:up-solid"
                                                         class="up-down-arro"></iconify-icon></span>
                                             </div>
@@ -442,7 +442,7 @@
                                         <div class="dropdown  dropdown-section">
                                             <div class=" dropdown-toggle dropdown-title " data-bs-toggle="dropdown"
                                                 aria-expanded="false">
-                                                <span> Select Spaces </span>
+                                                <span> Privet </span>
                                                 <span class="ms-auto icon-box"><iconify-icon icon="teenyicons:up-solid"
                                                         class="up-down-arro"></iconify-icon></span>
                                             </div>
@@ -514,7 +514,7 @@
                                         <div class="dropdown  dropdown-section">
                                             <div class=" dropdown-toggle dropdown-title " data-bs-toggle="dropdown"
                                                 aria-expanded="false">
-                                                <span> Select Spaces </span>
+                                                <span> Privet </span>
                                                 <span class="ms-auto icon-box"><iconify-icon icon="teenyicons:up-solid"
                                                         class="up-down-arro"></iconify-icon></span>
                                             </div>
@@ -586,7 +586,7 @@
                                         <div class="dropdown  dropdown-section">
                                             <div class=" dropdown-toggle dropdown-title " data-bs-toggle="dropdown"
                                                 aria-expanded="false">
-                                                <span> Select Spaces </span>
+                                                <span> Privet </span>
                                                 <span class="ms-auto icon-box"><iconify-icon icon="teenyicons:up-solid"
                                                         class="up-down-arro"></iconify-icon></span>
                                             </div>
@@ -656,9 +656,9 @@
                                 <div class="col-12 d-flex justify-content-between align-items-center">
                                     <div class="col-lg-4 col-md-5 col-sm-6">
                                         <div class="dropdown  dropdown-section">
-                                            <div class=" dropdown-toggle dropdown-title " data-bs-toggle="dropdown"
+                                            <div class=" dropdown-toggle dropdown-title dropdown-title-2 " data-bs-toggle="dropdown"
                                                 aria-expanded="false">
-                                                <span> Select Spaces </span>
+                                                <span> Privet </span>
                                                 <span class="ms-auto icon-box"><iconify-icon icon="teenyicons:up-solid"
                                                         class="up-down-arro"></iconify-icon></span>
                                             </div>
