--- a/Quiz-page.html
+++ b/Quiz-page.html
@@ -43,7 +43,8 @@
                                 <li><a class="dropdown-item" href="#">View profile</a></li>
                                 <li><a class="dropdown-item" href="#">Edit profile</a></li>
                                 <li><a class="dropdown-item" href="Members-page.html">View Members</a></li>
-                                <li><a class="dropdown-item" href="Countries-Communities.html">Country/Community</a></li>
+                                <li><a class="dropdown-item" href="Countries-Communities.html">Country/Community</a>
+                                </li>
                                 <li><a class="dropdown-item" href="#">Logout</a></li>
                             </ul>
                         </div>
@@ -192,7 +193,7 @@
                             <div class="Quiz-title">
                                 <p><a href="Quiz-answer.html">Single choice question will some here</a></p>
                             </div>
-                            <form action="">
+                            <form action="" id="Quiz-form">
                                 <div class="input-box">
 
                                     <input class="" type="radio" id="Answer 1" name="answer" value="Answer 1">
@@ -215,7 +216,7 @@
                                 </div>
 
 
-                                <button onclick="location.href='Quiz-answer.html'">Submit</button>
+                                <button id="submitBtn">Submit</button>
                             </form>
 
                         </div>
@@ -224,7 +225,7 @@
                             <div class="Quiz-title">
                                 <p><a href="">True/False question will come here</a></p>
                             </div>
-                            <form action="">
+                            <form action="" id="Quiz-form">
                                 <div class=" input-box">
                                     <input type="radio" id="True" name="answer" value="True">
                                     <label for="True" class="col-11">True</label><br>
@@ -234,7 +235,7 @@
                                     <label for="False" class="col-11">False</label><br>
                                 </div>
 
-                                <button onclick="location.href='./Quiz-answer.html'">Submit</button>
+                                <button id="submitBtn">Submit</button>
                             </form>
 
                         </div>
@@ -243,7 +244,7 @@
                             <div class="Quiz-title">
                                 <p><a href="">Multiple choice question will come here</a></p>
                             </div>
-                            <form action="">
+                            <form action="" id="Quiz-form">
                                 <div class="input-box">
 
                                     <input type="checkbox" id="Answer 5" name="answer" value="Answer 5">
@@ -266,7 +267,7 @@
                                     <input type="checkbox" id="Answer 8" name="answer" value="Answer 8">
                                     <label for="Answer 8" class="col-11">Answer 1 will come here answer 1</label><br>
                                 </div>
-                                <button onclick="location.href='./Quiz-answer.html'">Submit</button>
+                                <button id="submitBtn">Submit</button>
                             </form>
                         </div>
                         <!-- 4 -->
@@ -274,7 +275,7 @@
                             <div class="Quiz-title">
                                 <p><a href="">True/False question will come here</a></p>
                             </div>
-                            <form action="">
+                            <form action="" id="Quiz-form">
                                 <div class="input-box">
 
                                     <input type="radio" id="Yes" name="answer" value="Yes">
@@ -285,7 +286,7 @@
                                     <label for="No" class="col-11">No</label><br>
                                 </div>
 
-                                <button onclick="location.href='./Quiz-answer.html'">Submit</button>
+                                <button id="submitBtn">Submit</button>
                             </form>
 
                         </div>
@@ -327,7 +328,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
         integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
         crossorigin="anonymous"></script>
-        <script src="assets/js/script.js"></script>
+    <script>
+        document.getElementById("submitBtn").addEventListener("click", function (event) {
+            event.preventDefault(); // Prevent form submission (optional if the button is not inside a <form>)
+            window.location.href = "./Quiz-answer.html"; // Redirect to Quiz-answer.html
+        });
+    </script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
