--- a/Users-Community-View.html
+++ b/Users-Community-View.html
@@ -189,16 +189,23 @@
                     </aside>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-12 order-1 order-lg-2  order-md-2">
-                 <div class=" Users-Community-right-body">
-                    
+                    <div class=" Users-Community-right-body">
+
                         <p class="head-title">Community name will come here</p>
-                        <p> Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here Sample text will come here</p>
+                        <p> Sample text will come here Sample text will come here Sample text will come here Sample text
+                            will come here Sample text will come here Sample text will come here Sample text will come
+                            here Sample text will come here Sample text will come here Sample text will come here Sample
+                            text will come here Sample text will come here Sample text will come here Sample text will
+                            come here Sample text will come here Sample text will come here Sample text will come here
+                            Sample text will come here Sample text will come here Sample text will come here Sample text
+                            will come here Sample text will come here Sample text will come here Sample text will come
+                            here</p>
                         <div class="btn-section">
                             <a href="" class="btn-box">Country 1</a>
                             <a href="" class="btn-box">Country 2</a>
                         </div>
-                   
-                 </div>
+
+                    </div>
                 </div>
             </div>
         </div>
